# RAPIDORCH-MCP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PRD.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  env.template  pyproject.toml  script.sh
.github/workflows/: ci.yml
docs/: LLM_DECISION_RECORD.md
scripts/: setup.sh
src/rapidorch/: cli.py  config.py  main.py
src/rapidorch/core/: exceptions.py
tests/: test_main.py
